--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "dependencies": {
     "firebase": "^10.1.0",
+    "fuse.js": "^6.6.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "recoil": "^0.7.7",
+    "swiper": "^8.4.5",
     "zmp-sdk": "^2.28.1",
     "zmp-ui": "^1.8.0"
   },
