--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^10.1.0",
+    "fuse": "^0.4.0",
+    "fuse.js": "^6.6.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
