--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.4.0",
     "firebase": "^10.1.0",
     "fuse": "^0.4.0",
     "fuse.js": "^6.6.2",
