--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.15.0",
     "recoil": "^0.7.7",
     "swiper": "^10.1.0",
+    "uuid": "^9.0.0",
     "zmp-sdk": "^2.28.1",
     "zmp-ui": "^1.8.0"
   },
